# SkellEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yaml  index.md  robots.txt
_data/: navigation.yml  (+2 more)
docs/: Building.md  CMakeLists.txt  Dependencies.md  Doxyfile.in  hierarchy.md  index.md
docs/JSON/: Components.md  Game.md  JSON.md
docs/Maps/: TiledMaps.md
docs/entities/: Entity.md
docs/images/: hierarchyTree.tex
docs/lua/: config.ld.in  documentation.lua  entity.lua  entityManager.lua  lua.md
docs/states/: states.md
documentation/: Building.md  CMakeLists.txt  Dependencies.md  Doxyfile.in  index.md
documentation/JSON/: Game.md  JSON.md
documentation/Maps/: Objects.md
documentation/alpha/c++/: AnimationComponent_8h_source.html  AnimationMap_8h_source.html  AnimationSystem_8h_source.html  Animator_8h_source.html  BadLevelDescription_8h_source.html  ColorAnimation_8h_source.html  Component_8h.html  Component_8h__dep__incl.map  Component_8h__dep__incl.md5  Component_8h__incl.map  Component_8h__incl.md5  Component_8h_source.html  ConstructorNotValid_8h_source.html  Context_8h_source.html  EllipseShape_8h_source.html  Engine_8h_source.html  EntityManager_8h_source.html  Entity_8h_source.html  EventConnection_8h_source.html  EventHandler_8h_source.html  Event_8h.html  Event_8h__dep__incl.map  Event_8h__dep__incl.md5  Event_8h__incl.map  Event_8h__incl.md5  Event_8h_source.html  ExternComponent_8h_source.html  ExternEvent_8h_source.html  ExternMemberStorage_8h_source.html  ExternState_8h_source.html  ExternSystem_8h_source.html  FadeAnimation_8h_source.html  FileManager_8h_source.html  FileNotFound_8h_source.html  FrameAnimation_8h_source.html  GameDescription_8h_source.html  GraphicalOrthogonalSystem_8h_source.html  GraphicalSpriteSheetComponent_8h_source.html  GraphicalSystem_8h_source.html  InputHandler_8h_source.html  (+502 more)
documentation/alpha/c++/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  enums_0.js  files_2.js  (+58 more)
documentation/alpha/lua/: index.html
documentation/alpha/lua/classes/: entity.html  entityManager.html
documentation/entities/: Entity.md
documentation/lua/: config.ld.in  lua.md
documentation/systems/: Systems.md
engine/: CMakeLists.txt  SkellEngineConfig.cmake.in
engine/dependencies/lua/: CMakeLists.txt
engine/include/: Context.h  Engine.h  FileManager.h  FileNotFound.h  config.h.in
engine/include/SkellEngine/: Color.hpp  Concepts.hpp  Context.h  Context.hpp  Engine.h  Engine.hpp  Logger.hpp  config.hpp.in
engine/include/SkellEngine/animations/: AnimationMap.h  AnimationMap.hpp  Animator.h  Animator.hpp  ColorAnimation.h  ColorAnimation.hpp  FadeAnimation.h  FrameAnimation.h  RefAnimation.h  TimedAnimation.h
engine/include/SkellEngine/entities/: Entity.h  Entity.hpp  EntityManager.h  EntityManager.hpp
engine/include/SkellEngine/errors/: BadLevelDescription.h  ConstructorNotValid.h  FileNotFound.h  FileNotFound.hpp  InvalidEvent.hpp  InvalidJSON.h  InvalidMap.hpp  NotImplemented.hpp  StateNotFound.h  SystemNotFound.h  WrongType.h  WrongType.hpp
engine/include/entities/: Entity.h  EntityManager.h
engine/include/errors/: BadLevelDescription.h  ConstructorNotValid.h  FileNotFound.h  SystemNotFound.h
engine/include/files/: FileManager.h  GameDescription.h  LevelDescription.h  StateDescription.h
engine/include/log/: Logger.h
engine/include/map/: Layers.h  Map.h
engine/include/states/: GameState.h  MainMenuState.h  PauseState.h  State.h  StateManager.h
engine/include/systems/: ExternSystem.h  GraphicalOrthogonalSystem.h  GraphicalSystem.h  System.h  SystemManager.h
engine/include/tmxlite/: FreeFuncs.hpp  Log.hpp  Object.hpp  Tileset.hpp
engine/include/utilities/: json_lua.h
engine/src/: Color.cpp  Context.cpp  Engine.cpp  FileManager.cpp  Logger.cpp  main.cpp
engine/src/animations/: ColorAnimation.cpp  FadeAnimation.cpp  FrameAnimation.cpp
engine/src/entities/: Entity.cpp  EntityManager.cpp
engine/src/events/: Event.cpp  EventConnection.cpp  EventHandler.cpp  ExternEvent.cpp  StoreEventConnections.cpp
engine/src/files/: FileManager.cpp  GameDescription.cpp  LevelDescription.cpp  StateDescription.cpp
engine/src/gui/: GUI.cpp  Label.cpp  Widget.cpp
engine/src/input/: InputHandler.cpp
engine/src/levels/: Level.cpp  LevelDescription.cpp
engine/src/log/: Logger.cpp
engine/src/map/: Layers.cpp  Map.cpp
engine/src/shapes/: EllipseShape.cpp
engine/src/states/: ExternState.cpp  GameState.cpp  MainMenuState.cpp  PauseState.cpp  State.cpp  StateContext.cpp  StateManager.cpp
engine/src/systems/: AnimationSystem.cpp  ExternSystem.cpp  GraphicalOrthogonalSystem.cpp  GraphicalSystem.cpp  System.cpp  SystemManager.cpp
engine/src/tmxlite/: FreeFuncs.cpp  ImageLayer.cpp  Map.cpp  Object.cpp  ObjectGroup.cpp  Property.cpp  TileLayer.cpp  Tileset.cpp  miniz.c
engine/src/utilities/: ExternMemberStorage.cpp  MemberStorage.cpp  VariableStorage.cpp  json_fusion.cpp  json_lua.cpp  lua_gui.cpp  lua_sfml.cpp
examples/test/: CMakeLists.txt  GameState.cpp  TestSystem.cpp  main.cpp
examples/test/media/: game.json  keys.json
tests/: CMakeLists.txt  main.cpp
tests/FileManager/: gameDescription_tests.cpp
tests/entities/: entity_manager_test.cpp  entity_test.cpp
tests/entities/components/: component_setter_getter_test.cpp
tests/events/: event_handler_test.cpp
tests/files/: fileManager_tests.cpp  gameDescription_tests.cpp
tests/input/: input_handler_test.cpp
tests/math/: matrix_test.cpp  vector2_test.cpp
tests/media/: game.json
tests/random/: random_choice_test.cpp  uniform_random_generator_test.cpp
tests/systems/: systems_tests.cpp
tests/utilities/: json_lua_tests.cpp
(+194 files in other folders)
